List page text overflow fix

--- a/style.css
+++ b/style.css
@@ -277,7 +277,7 @@ article > div {
 }
 
 article .tags {
-  margin-top: 2rem;
+  margin-top: 1rem;
 }
 
 .tags {
@@ -1312,9 +1312,7 @@ footer {
   nav {
     padding: 0;
   }
-}
 
-@media only screen and (max-width: 990px) {
   .mobile-buttons {
     display: block;
   }
